login ya farag ellaaaah

--- a/mazad-web/src/main/webapp/checkout.xhtml
+++ b/mazad-web/src/main/webapp/checkout.xhtml
@@ -33,7 +33,7 @@
                                 <div class="close1"> </div>
                                 <div class="cart-sec simpleCart_shelfItem">
                                     <div class="cart-item cyc">
-                                        <h:graphicImage class="img-responsive" name="images/pic1.jpg" /></a>
+                                      <a><h:graphicImage class="img-responsive" name="images/pic1.jpg" /></a>
                                     </div>
                                     <div class="cart-item-info">
                                         <h3><a href="#">Mountain Hopper(XS R034)</a><span>Model No: 3578</span></h3>
@@ -64,7 +64,7 @@
                                 <div class="close2"> </div>
                                 <div class="cart-sec simpleCart_shelfItem">
                                     <div class="cart-item cyc">
-                                        <h:graphicImage class="img-responsive" name="images/pic2.jpg" /></a>
+                                      <a>  <h:graphicImage class="img-responsive" name="images/pic2.jpg" /></a>
                                     </div>
                                     <div class="cart-item-info">
                                         <h3><a href="#">Mountain Hopper(XS R034)</a><span>Model No: 3578</span></h3>
