--- a/mazad-web/src/main/webapp/pieces/header.xhtml
+++ b/mazad-web/src/main/webapp/pieces/header.xhtml
@@ -25,6 +25,9 @@
                         </form>
                     </div>
                 </div>
+                <div class="welcomeUser">
+                 <h:outputText value="welcome:#{user.u.userName}" style="font-weight:bold;color : white;"/> 
+                </div>
 
                 <!-- search-scripts -->
                 <h:outputScript name="js/classie.js" />
