styling home page

--- a/mazad-web/src/main/webapp/pieces/header.xhtml
+++ b/mazad-web/src/main/webapp/pieces/header.xhtml
@@ -48,10 +48,10 @@
             <div class=" h_menu4">
                 <ul class="memenu skyblue">
                     <h:form>
-                        <li><h:commandLink value = "Auction" action = "auction.xhtml" style="margin-right: 30px;" /></li>
-                        <li><h:commandLink value = "Home" action = "index.xhtml" style="margin-right: 30px;" /></li>
-                        <li><h:commandLink value = "Register" action = "register.xhtml" style="margin-right: 30px;" /></li>
-                        <li><h:commandLink value = "Login" action = "login.xhtml" style="margin-right: 30px;" /></li>
+                        <li><h:commandButton value = "Auction" action = "auction.xhtml" style="margin-right: 30px;"  styleClass="btn btn-danger"/></li>
+                        <li><h:commandButton value = "Home" action = "index.xhtml" style="margin-right: 30px;" styleClass="btn btn-danger"/></li>
+                        <li><h:commandButton value = "Register" action = "register.xhtml" style="margin-right: 30px;" styleClass="btn btn-danger" /></li>
+                        <li><h:commandButton value = "Login" action = "login.xhtml" style="margin-right: 30px;"  styleClass="btn btn-danger"/></li>
                     </h:form>
                 </ul> 
             </div>
