--- a/mazad-web/src/main/webapp/index.xhtml
+++ b/mazad-web/src/main/webapp/index.xhtml
@@ -2,152 +2,165 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:c="http://java.sun.com/jsp/jstl/core"
-      xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:p="http://primefaces.org/ui">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
+	xmlns:p="http://primefaces.org/ui">
 
-    <!---->
-    <h:outputStylesheet name="css/style.css" />
-    <h:body>
-        <ui:composition template="templates/masterTemplate.xhtml">
-            <ui:define name="content">
-                <div class="banner"></div>
+<!---->
+<h:outputStylesheet name="css/style.css" />
+<h:body>
+	<ui:composition template="templates/masterTemplate.xhtml">
+		<ui:define name="content">
+			<div class="banner"></div>
 
-                <!--content-->
-                <div class="container">
-                    <div class="cont">
+			<!--content-->
+			<div class="container">
+				<div class="cont">
 
-                        <!-- data model -->
+					<!-- data model -->
 
-                        <h:dataTable value="#{auction.model}" var="a">
+					<h:dataTable value="#{auction.model}" var="a">
 
-                            <div class="thumbnail">
-                                <div class="caption">
-                                    <h:column>
+						<div class="thumbnail">
+							<div class="caption">
+								<h:column>
 
-                                        <div class="thumbnail">
-                                            <div class="caption">
+									<div class="thumbnail">
+										<div class="caption">
 
-                                                <h3>
-                                                    <label class=" btn-bordered-primary" >Auction name</label> <span
-                                                        class="btn btn-default" style="width: 100%;"> <h:outputText
-                                                            value="#{a.auctionName}"
-                                                            styleClass="btn btn-default" />
-                                                    </span>
-                                                </h3>
-                                                <span> <h:graphicImage value="resources/images/s1.jpg"
-                                                                       width="350" height="350" />
-                                                </span>
+											<h3>
+												<label class=" btn-bordered-primary">Auction name</label> <span
+													class="btn btn-default" style="width: 100%;"> <h:outputText
+														value="#{a.auctionName}" styleClass="btn btn-default" />
+												</span>
+											</h3>
+											<span> <h:graphicImage value="resources/images/s1.jpg"
+													width="350" height="350" />
+											</span>
 
-                                            </div>
-                                        </div>
-
-
-                                    </h:column>
-                                    <h:column class="col-sm-6 col-md-4">
-                                        <div class="thumbnail">
-                                            <div class="caption">
+										</div>
+									</div>
 
 
-                                                <br></br> <br></br>
-                                                <h3>
-                                                    <label class=" btn-bordered-primary" style="width: 100%;">End
-                                                        Date </label>
-                                                </h3>
-                                                <br></br>
-                                                <h3>
-                                                    <span class="btn btn-default" style="width: 100%;"> <h:outputText
-                                                            class="btn btn-default" value="#{a.endDate}" />
-                                                    </span>
-                                                </h3>
-                                                <br></br>
-                                                <!-- time  -->
-                                                <h:form>
-                                                    <h3>
-                                                        <label class=" btn-bordered-primary" style="width: 100%;">available
-                                                            time </label>
-                                                    </h3>
-                                                    <br></br>
-                                                    <span class="btn btn-default" style="width: 100%;"> <h:outputText
-                                                            value="#{auction.minuteLefted}" id="remindTime"
-                                                            class="btn btn-default" />
-                                                    </span>
-                                                    <p:poll interval="1"
-                                                            listener="#{auction.getTimeAvailable(a.endDate)}"
-                                                            update="remindTime" />
+								</h:column>
+								<h:column class="col-sm-6 col-md-4">
+									<div class="thumbnail">
+										<div class="caption">
 
-                                                </h:form>
 
-                                                <!-- time -->
-                                                <ui:repeat var="o" value="#{a.productsList}">
-                                                    <c:set var="price" value="#{o.productPrice}" />
-                                                </ui:repeat>
-                                                <br></br>
-                                                <h3>
-                                                    <label class=" btn-bordered-primary" style="width: 100%;">Auction
-                                                        StartPrice</label>
-                                                </h3>
-                                                <br></br> <span class="btn btn-default" style="width: 100%;">
+											<br></br> <br></br>
+											<h3>
+												<label class=" btn-bordered-primary" style="width: 100%;">End
+													Date </label>
+											</h3>
+											<br></br>
+											<h3>
+												<span class="btn btn-default" style="width: 100%;"> <h:outputText
+														class="btn btn-default" value="#{a.endDate}" />
+												</span>
+											</h3>
+											<br></br>
+											<!-- time  -->
+											<h:form>
+												<h3>
+													<label class=" btn-bordered-primary" style="width: 100%;">available
+														time </label>
+												</h3>
+												<br></br>
+												<span class="btn btn-default" style="width: 100%;"> <h:outputText
+														value="#{auction.minuteLefted}" id="remindTime"
+														class="btn btn-default" />
+												</span>
+												<p:poll interval="1"
+													listener="#{auction.getTimeAvailable(a.endDate)}"
+													update="remindTime" />
 
-                                                    <span class="btn btn-square-toround">
-                                                        #{a.productsList.stream().map(o->o.productPrice).sum()} LE </span>
-                                                </span>
-                                                <br></br>
-                                                <h:form>
-                                                    <h:commandButton action="#{auction.viewProduct(a.auctionId)}" value="View Auction products"
-                                                                 class="btn btn-danger custome-merg" style="width: 100%;" />
-                                                </h:form>
-                                                
-                                            </div>
-                                        </div>
+											</h:form>
 
-                                    </h:column>
-                                    <h:column>
-                                        <div class="thumbnail">
-                                            <div class="caption">
-                                                <label class="btn btn-primary" style="width: 100%; font-size: 110%;">you can bid here</label>
-                                                <br></br><br></br><br></br>
-                                                <div class="bidform">
-                                                    <h:form>
-                                                        <center>
+											<!-- time -->
+											<ui:repeat var="o" value="#{a.productsList}">
+												<c:set var="price" value="#{o.productPrice}" />
+											</ui:repeat>
+											<br></br>
+											<h3>
+												<label class=" btn-bordered-primary" style="width: 100%;">Auction
+													StartPrice</label>
+											</h3>
+											<br></br> <span class="btn btn-default" style="width: 100%;">
 
-                                                            <div class="input-group" style="width: 100%;">
-                                                                <span class="input-group-addon">$</span>
-                                                                <h:inputText value="#" class="form-control" />
-                                                                <span class="input-group-addon">.00</span>
-                                                            </div>
-                                                            <h:commandButton class="btn btn-danger custome-merg"
-                                                                             value="Bid" action="#" style="width: 100%;" />
+												<span class="btn btn-square-toround">
+													#{a.productsList.stream().map(o->o.productPrice).sum()} LE
+											</span>
+											</span> <br></br>
+											<h:form>
+												<h:commandButton
+													action="#{auction.viewProduct(a.auctionId)}"
+													value="View Auction products"
+													class="btn btn-danger custome-merg" style="width: 100%;" />
+											</h:form>
 
-                                                        </center>
-                                                    </h:form>
-                                                </div>
-                                                <br></br><br></br><br></br>
-                                                <label class="btn btn-primary" style="width: 100%;">winner price until now </label>
-                                                <br></br><br></br><br></br>
+										</div>
+									</div>
 
-                                                <span class="btn btn-default" style="width: 100%;"> <h:outputText
-                                                        value="50" id="remindTime"
-                                                        class="btn btn-default" />
-                                                </span>
-                                            </div>
-                                        </div>
+								</h:column>
+								<h:column>
+									<div class="thumbnail">
+										<div class="caption">
+											<label class="btn btn-primary"
+												style="width: 100%; font-size: 110%;">you can bid
+												here</label> <br></br>
+											<br></br>
+											<br></br>
+											<div class="bidform">
+												<h:form>
+													<center>
 
-                                    </h:column>
+														<div class="input-group" style="width: 100%;">
+															<span class="input-group-addon">$</span>
+															<h:inputText value="#{auction.amount}"
+																class="form-control" />
+															<span class="input-group-addon">.00</span>
+														</div>
+														<h:commandButton class="btn btn-danger custome-merg"
+															value="Bid" action="#{auction.userBid(a.auctionId)}"
+															style="width: 100%;" />
 
-                                </div>
-                            </div>
-                        </h:dataTable>
+													</center>
+												</h:form>
+											</div>
+											<br></br>
+											<br></br>
+											<br></br> <label class="btn btn-primary" style="width: 100%;">winner
+												price until now </label> <br></br>
+											<br></br>
+											<br></br>
+											<h:form>
+												<span class="btn btn-default" style="width: 100%;"> <h:outputText
+														value="#{auction.winner}" id="winner" class="btn btn-default" />
+												</span>
+												<p:poll interval="1" listener="#{auction.getWinnerPrice()}"
+													update="winner" />
+											</h:form>
 
-                        <!-- data model -->
-                        <div class="clearfix"></div>
 
-                    </div>
-                </div>
-            </ui:define>
-        </ui:composition>
-    </h:body>
+										</div>
+									</div>
+
+								</h:column>
+
+							</div>
+						</div>
+					</h:dataTable>
+
+					<!-- data model -->
+					<div class="clearfix"></div>
+
+				</div>
+			</div>
+		</ui:define>
+	</ui:composition>
+</h:body>
 </html>
