--- a/mazad-web/src/main/webapp/index.xhtml
+++ b/mazad-web/src/main/webapp/index.xhtml
@@ -97,6 +97,7 @@
                                                 </span>
                                                 <br></br>
                                                 <h:form>
+                                                    <h:outputLabel value="#{a.auctionId}"/>
                                                     <h:commandButton action="#{auction.viewProduct(a.auctionId)}" value="View Auction products"
                                                                  class="btn btn-danger custome-merg" style="width: 100%;" />
                                                 </h:form>
