--- a/mazad-web/src/main/webapp/pieces/header.xhtml
+++ b/mazad-web/src/main/webapp/pieces/header.xhtml
@@ -49,7 +49,7 @@
                 <ul class="memenu skyblue">
                     <h:form>
                         <li><h:commandButton value = "Auction" action = "auction.xhtml" style="margin-right: 30px;"  styleClass="btn btn-danger"/></li>
-                        <li><h:commandButton value = "Home" action = "index.xhtml" style="margin-right: 30px;" styleClass="btn btn-danger"/></li>
+                        <li><h:commandButton value = "Home" action = "#{auction.loadList}" style="margin-right: 30px;" styleClass="btn btn-danger"/></li>
                         <li><h:commandButton value = "Register" action = "register.xhtml" style="margin-right: 30px;" styleClass="btn btn-danger" /></li>
                         <li><h:commandButton value = "Login" action = "login.xhtml" style="margin-right: 30px;"  styleClass="btn btn-danger"/></li>
                     </h:form>
