--- a/mazad-web/src/main/webapp/viewProducts.xhtml
+++ b/mazad-web/src/main/webapp/viewProducts.xhtml
@@ -22,7 +22,7 @@
 
 
 
-                        <p:repeat value="#{auction.productsModel}" var="o">
+                        <ui:repeat value="#{auction.productsModel}" var="o">
                             <div class="row">
                                 <div class="col-sm-6 col-md-4">
                                     <div class="thumbnail">
@@ -51,7 +51,7 @@
                                 </div>
                             </div>
                             <hr />
-                        </p:repeat>
+                        </ui:repeat>
 
                     </div>
                 </div>
