--- a/mazad-web/src/main/webapp/index.xhtml
+++ b/mazad-web/src/main/webapp/index.xhtml
@@ -122,7 +122,7 @@
 														<div class="input-group" style="width: 100%;">
 															<span class="input-group-addon">$</span>
 															<h:inputText value="#{auction.amount}"
-																class="form-control" />
+																class="form-control"  required="true"/>
 															<span class="input-group-addon">.00</span>
 														</div>
 														<h:commandButton class="btn btn-danger custome-merg"
